The migration guide's corpus table carries run 10: sixteen repositories lock, and the two new walls are named